# cv-camilo-velez

./: .gitignore  .pdm-python  CV_Camilo_Velez_TMR_Optimized.docx  README.md  compile_all.sh  compile_cv.sh  pyproject.toml  scaffolding.sh
.claude/: settings.json
common/: packages.tex  style.tex
en/academic/: camilo_velez_cv_en_academic.tex
en/industry/: camilo_velez_cv_en_industry.tex
en/industry-2.0/: CV_Camilo_Velez.docx  generate_cv.py
en/industry-word/: CV_Camilo_Velez.docx  generate_cv.py
en/industry-word/data-engineer/: CV_Camilo_Velez_DataEngineer.docx  generate_cv.py
en/industry/sections/: certifications.tex  education.tex  experience.tex  footer.tex  header.tex  language.tex  skills.tex  summary.tex
es/academia/: camilo_velez_cv_es_academia.tex
es/industria/: camilo_velez_cv_es_industria.tex
es/industria/secciones/: certificaciones.tex  educacion.tex  encabezado.tex  experiencia.tex  habilidades.tex  idiomas.tex  perfil.tex  pie.tex
