[project]
name = "cv-camilo-velez"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Camilovelez1", email = "camilo95022@gmail.com"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
